Add keyboard maps, docker-compose.yml, small fix